# trill

./: CMakeLists.txt  README.md
examples/: calculator.cpp
include/: grammar.hpp  rule.hpp  table.hpp  trill.hpp
tests/: simple.cpp
